# Gypsophino

./: README.md
proposal/: proposal.tex
src/: CMakeLists.txt  basic.cpp  basic.hpp  const.cpp  const.hpp  control.cpp  control.hpp  game.cpp  game.hpp  main.cpp  makefile  note.cpp  note.hpp  playground.cpp  playground.hpp  scene.cpp  scene.hpp  score.cpp  score.hpp  setting.cpp  setting.hpp  shape.cpp  shape.hpp  slideshow.cpp  slideshow.hpp  song_map.cpp  song_map.hpp  text.cpp  text.hpp  title.cpp  title.hpp  titlepage.cpp  titlepage.hpp  track.cpp  track.hpp  window.cpp  window.hpp
src/song_maps/: sample.json  simplified.json  song_map_db.json
